# service-rs

./: Cargo.toml  readme.md
src/: config.rs  main.rs  service_login.rs
src/service_installer/: linux.rs  macos.rs  windows.rs
