[package]
name = "service-rs"
version = "0.1.0"
edition = "2021"

# Here cfg(windows) is used to specify the dependencies for the Windows platform

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"

# Here cfg(unix) is used to specify the dependencies for the Unix platform
[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"

[dependencies]
log = "0.4"
simple_logger = "0.12"

