[package]
name = "cross_platform_service"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simplelog = "0.12"
clap = { version = "4.3", features = ["derive"] }
lazy_static = "1.4"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6.0"
winreg = "0.10"

[target.'cfg(unix)'.dependencies]
nix = "0.26"